fix: fix field wrapping by adjusting container width

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -3,7 +3,7 @@
   background-color: #ffffff;
   width: 100%;
   
-  max-width: 640px; 
+  max-width: 780px; 
   
   padding: 2rem;
   border-radius: 12px;
